[project]
name = "amy-patch"
version = "0.1.0"
description = "amy-patch"
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
amy-patch = "amy_patch:cli"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/amy_patch.py"]
sources = ["src"]
